--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,7 +28,6 @@
   padding: 0;
   outline: 0;
   box-sizing: border-box;
-  font: 1.7rem 'Inter', sans-serif;
 }
 
 html,
@@ -41,4 +40,70 @@ body {
 body {
   background-color: var(--light-blue-100);
   -webkit-font-smoothing: antialiased;
+  font: 1.5rem 'Inter', sans-serif;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+header {
+  width: 100vw;
+  max-width: 1000px;
+  padding: 10px 0;
+  margin: 0 auto;
+}
+
+footer {
+  width: 100vw;
+  max-width: 1000px;
+  padding: 10px;
+  background-color: var(--dark-blue-300);
+  color: var(--light-blue-100);
+}
+
+label {
+  display: block;
+  color: var(--dark-blue-300);
+  font-size: 2rem;
+  margin-bottom: 10px;
+}
+
+textarea {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+
+  width: 100%;
+  height: 10%;
+  resize: none;
+
+  font: 1.7rem 'Inter', sans-serif;
+  line-height: 2.4rem;
+  box-shadow: 2px 2px 8px 4px rgba(0, 0, 0, 0.05);
+  background-color: var(--light-blue-100);
+  border: none;
+  border-radius: 8px;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+h3 {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+p {
+  font-size: 1.4rem;
+}
+
+a:hover,
+a:active {
+  color: var(--dark-blue-100);
+}
+
+a:visited {
+  color: var(--light-blue-100);
 }
