--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -85,6 +85,7 @@ textarea {
   background-color: var(--light-blue-100);
   border: none;
   border-radius: 8px;
+  color: var(--dark-blue-300);
   padding: 5px;
   margin-bottom: 10px;
 }
