--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,7 +8,7 @@ main {
 }
 
 section + section {
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 section.decodificador {
@@ -51,4 +51,11 @@ section.display .display_searching .display_searching_text {
 
 section.display .display_result {
   display: none;
+  padding: 20px 15px;
+  margin-top: 20px;
+}
+
+section.display .display_result textarea {
+  background-color: white;
+  box-shadow: none;
 }
