--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -76,7 +76,7 @@ textarea {
   box-sizing: border-box;
 
   width: 100%;
-  height: 10%;
+  min-height: 25vh;
   resize: none;
 
   font: 1.7rem 'Inter', sans-serif;
@@ -86,7 +86,7 @@ textarea {
   border: none;
   border-radius: 8px;
   color: var(--dark-blue-300);
-  padding: 5px;
+  padding: 15px;
   margin-bottom: 10px;
 }
 
